# training-cody-ansible

./: pyproject.toml
role-to-collection-conversion/: .gitignore  README.md  ansible.cfg  setup-env.sh  setup-mac.sh
role-to-collection-conversion/roles/file_manager/: README.md  molecule.yml
role-to-collection-conversion/roles/file_manager/.ansible/roles/: example_author.file_manager
role-to-collection-conversion/roles/file_manager/defaults/: main.yml
role-to-collection-conversion/roles/file_manager/handlers/: main.yml
role-to-collection-conversion/roles/file_manager/meta/: main.yml
role-to-collection-conversion/roles/file_manager/molecule/: README.md
role-to-collection-conversion/roles/file_manager/molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
role-to-collection-conversion/roles/file_manager/molecule/mac/: converge.yml  molecule.yml  verify.yml
role-to-collection-conversion/roles/file_manager/molecule/macos/: converge.yml  molecule.yml  verify.yml
role-to-collection-conversion/roles/file_manager/molecule/multi-platform/: molecule.yml  prepare.yml  verify.yml
role-to-collection-conversion/roles/file_manager/molecule/simple/: converge.yml  molecule.yml  verify.yml
role-to-collection-conversion/roles/file_manager/tasks/: debian.yml  main.yml  redhat.yml
role-to-collection-conversion/roles/file_manager/templates/: example.conf.j2
role-to-collection-conversion/roles/file_manager/vars/: main.yml
