[project]
name = "training-cody-ansible"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "ansible>=11.6.0",
    "molecule>=25.5.0",
    "molecule-plugins[podman]>=23.7.0",
    "yamllint>=1.37.1",
    "molecule-podman>=2.0.0",
    "ansible-core>=2.14.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "jinja2>=3.0.0",
]
